working on the get all pastor method